# RiskAI

./: .gitattributes  LICENSE.md  README.md  pyproject.toml  run_riskAI.py
Assets/: Assignment Outline.md  Design Specification.md  HierachyChart.docx
Assets/Design Specification/: Design Specification.html  Design Specification.md  DesignSpecConvenient.md  HierachyChartAgent.docx
Assets/Final Report/: Assessment Outline.md  FinalReport.html  FinalReport.md  Meeting Questions save.txt
DiceData/: AvgAttLost.csv  MaxAttLost.csv  MinAttLost.csv  PerfectDice.csv
maps/: classic.py  mapStructures.py
riskai/: __main__.py  actionAI.py  actions.py  agentHelper.py  dice.py  drawInterface.py  heuristic.py  interface.py  main.py  randAI.py  riskAi.py  runAI.py  simpleAI.py  structures.py  testing.py
riskai/ImageCache/: arb changelog.txt
testing/: testing.py
tests/: arborescenceTest.py  drawTests.py  gameDrawTests.py  graphTests.py  mstTimeTests.py  mstTimeTests2.py  testingConfig.txt  tests.py
tests/textConfigs/: actionAI1.txt  arborescence2.txt  arborescence3.txt  arborescenceMulti1.txt  randSave.txt  randomAgentBasicSave.txt  randomStart5p.txt  runCommands.txt  testingConfig.txt
